deploy/config/dev/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-witness-it-app
  namespace: witness-it
  labels:
    app: dev-witness-it-app
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  selector:
    app: dev-witness-it-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-witness-it-app
  namespace: witness-it
  labels:
    app: dev-witness-it-app
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: dev-witness-it-app
  template:
    metadata:
      labels:
        app: dev-witness-it-app
    spec:
      containers:
        - name: dev-witness-it-app
          image: mburton3969/witness-it:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          command:
            ['/usr/local/bin/startup.sh', '/usr/sbin/apachectl', '-DFOREGROUND']
          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'
            limits:
              memory: '512Mi'
              cpu: '500m'
