deploy/config/dev/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-witness-it-mysql
  namespace: witness-it
  labels:
    app: dev-witness-it-mysql
spec:
  ports:
    - port: 3306
      name: mysql8
      protocol: TCP

  selector:
    app: dev-witness-it-mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-witness-it-mysql
  namespace: witness-it
  labels:
    app: dev-witness-it-mysql

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dev-witness-it-mysql

  template:
    metadata:
      labels:
        app: dev-witness-it-mysql

    spec:
      volumes:
        - name: dev-witness-it-mysql-pv
          persistentVolumeClaim:
            claimName: dev-witness-it-mysql-pvc

      containers:
        - name: mysql8
          image: mysql:8.0
          args:
            - --default-authentication-plugin=mysql_native_password

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: dev-witness-it-mysql-pv
              mountPath: /var/lib/mysql

          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'

            limits:
              memory: '512Mi'
              cpu: '500m'

      restartPolicy: Always
