deploy/config/dev/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-witness-it-redis
  namespace: witness-it
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: dev-witness-it-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-witness-it-redis
  namespace: witness-it
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: dev-witness-it-redis
  template:
    metadata:
      labels:
        app: dev-witness-it-redis
    spec:
      containers:
        - name: dev-witness-it-redis
          image: redis:7-alpine
          command: ['redis-server']
          args: ['--appendonly', 'yes']
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'
            limits:
              memory: '512Mi'
              cpu: '500m'
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: dev-witness-it-redis-pvc
