deploy/config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-witness-it-ingress
  namespace: witness-it
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '100m'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '8k'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '8'
    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: '16k'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'GET, PUT, POST, DELETE, PATCH, OPTIONS'
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    # Only use this if NOT using Certificate resource:
    cert-manager.io/cluster-issuer: 'letsencrypt-production'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.witness-it.com
      secretName: dev.witness-it.com-tls
  rules:
    - host: dev.witness-it.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-witness-it-app
                port:
                  number: 80
